--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.11",
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
